<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivty"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:cardCornerRadius="15dp"
        android:layout_centerInParent="true"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#00ACC1"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <AutoCompleteTextView
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textAutoComplete"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <AutoCompleteTextView
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textAutoComplete"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/toglePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            >

            <AutoCompleteTextView
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/paword"
                android:inputType="textPassword"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/toglePassConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            >

            <AutoCompleteTextView
                android:id="@+id/etPassConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/verifyPass"
                android:inputType="textPassword"
                />

        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pria"
                />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wanita"
                android:layout_marginStart="15dp"
                />
        </RadioGroup>

        <CheckBox
            android:id="@+id/cbAgre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aggre"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:textColor="#FF6D00"
            android:textStyle="italic"
            />

        <Button
            android:id="@+id/btRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/register"
            android:textSize="16sp"
            android:background="#00ACC1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            />

    </LinearLayout>

</android.support.v7.widget.CardView>

</RelativeLayout>